manifest/jaeger-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  generation: 1
  name: tracing-jaeger-vs
  namespace: istio-system 
spec:
  gateways:
  - istio-ingress/tracing-jaeger-gw
  hosts:
  - trace.aladinmall.id 
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
